--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Digital Marketing, Cybersecurity Training, Best Software Developer 2025
 
 
     <meta charset="utf-8">
-    <title>ProMan - Personal Portfolio HTML Template</title>
+    <title>SuryaRaj</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
